--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -28,7 +28,7 @@
     font-size: 2rem;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 750px) {
     .title {
         font-size: 2rem;
         font-weight: 700;
@@ -46,9 +46,9 @@
     }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 600px) {
     .title {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         font-weight: 700;
         padding: .5rem;
     }
@@ -64,11 +64,15 @@
     }
 }
 
-@media (max-width: 370px) {
+@media (max-width: 420px) {
     .title {
         font-size: 1rem;
         font-weight: 700;
         padding: .5rem;
     }
 
+    .spanny {
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: .7rem;
+    }
 }
