--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,13 @@ a {
   font-size: 2rem;
   font-weight: 900;
 }
+
+@media (width: 750px) {
+  .active {
+    align-self: center;
+    background-color: #c0bab3;
+    color:#401c1a;
+    font-size: 1.5rem;
+    font-weight: 900;
+  } 
+}
